--- a/StatusForge.io/Engine/Dashboard.html
+++ b/StatusForge.io/Engine/Dashboard.html
@@ -176,6 +176,10 @@
                     <label>OBS Widget Polling (Seconds)</label>
                     <input type="number" id="widgetPollRate" placeholder="3">
                 </div>
+                <div style="grid-column: 1 / -1;">
+                    <label>Widget Fade Timer (Seconds) - Set to 0 for always visible</label>
+                    <input type="number" id="widgetFadeTimer" placeholder="15" min="0" max="300">
+                </div>
             </div>
             <button onclick="saveSettings()" class="btn-primary" style="margin-bottom: 30px;">SAVE ENGINE CONFIGURATION</button>
 
@@ -288,6 +292,7 @@
                 document.getElementById('idleCategory').value = data.idle_category || "Just Chatting";
                 document.getElementById('sbPort').value = data.sb_port || 8080;
                 document.getElementById('widgetPollRate').value = data.widget_poll_rate || 3;
+                document.getElementById('widgetFadeTimer').value = data.widget_fade_timer !== undefined ? data.widget_fade_timer : 15;
                 document.getElementById('rawgKey').value = data.rawg_key || "";
                 document.getElementById('sgdbKey').value = data.sgdb_key || "";
                 document.getElementById('igdbClient').value = data.igdb_client || "";
@@ -309,6 +314,7 @@
                     sb_port: parseInt(document.getElementById('sbPort').value) || 8080,
                     scan_interval: 5,
                     widget_poll_rate: parseInt(document.getElementById('widgetPollRate').value) || 3,
+                    widget_fade_timer: parseInt(document.getElementById('widgetFadeTimer').value) >= 0 ? parseInt(document.getElementById('widgetFadeTimer').value) : 15,
                     rawg_key: document.getElementById('rawgKey').value,
                     sgdb_key: document.getElementById('sgdbKey').value,
                     igdb_client: document.getElementById('igdbClient').value,
